--- a/src/fcfs/Readme
+++ b/src/fcfs/Readme
@@ -6,3 +6,16 @@ FCFS is a collection of functions and data structures useful for scheduling
 
 TODO: 
 ADD REFERENCES TO STUDIES.
+
+
+Flight: use variables as you like
+Keep track of delay management in scheduling.
+
+describe each scheduler
+
+write document
+reference correct papers. start doing folder organization.
+maurice
+delete int functions????
+
+add inputs to repo
