--- a/src/fcfs/Readme
+++ b/src/fcfs/Readme
@@ -1,21 +1,1 @@
-Readme for FCFS ver 1.0
-
-About:
-FCFS is a collection of functions and data structures useful for scheduling 
-
-
-TODO: 
-ADD REFERENCES TO STUDIES.
-
-
-Flight: use variables as you like
-Keep track of delay management in scheduling.
-
-describe each scheduler
-
-write document
-reference correct papers. start doing folder organization.
-maurice
-delete int functions????
-
-add inputs to repo
+readme for FCFS ver 1.0
